Closed
Bug 1403358
Opened 8 years ago
Closed 8 years ago
Disable Accessibility broken by ipc/mscom/ProxyStream.cpp:312:5: error: ‘ActivationContext’ has not been declared
Categories
(Core :: Disability Access APIs, defect, P2)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox58 | --- | fixed |
People
(Reporter: tjr, Assigned: tjr)
References
(Blocks 1 open bug)
Details
(Whiteboard: [tor])
Attachments
(1 file)
In http://searchfox.org/mozilla-central/source/ipc/mscom/ProxyStream.cpp#312 , ActivationContext is only declared if:
> #if defined(ACCESSIBILITY) && defined(MOZ_CRASHREPORTER)
> #include "mozilla/mscom/ActivationContext.h"
But if we build with only CrashReporter and not Accessibility, we get an error.
Inside of ProxyStream::ProxyStream() (http://searchfox.org/mozilla-central/source/ipc/mscom/ProxyStream.cpp#272 ) it would be easy to add defined(ACCESSIBILITY) to the guards if that is the correct approach.
| Assignee | ||
Comment 1•8 years ago
|
||
Hey Aaron, let me know if you would like me to write a patch that adds the guards (or anything else) or if this is a dupe.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 3•8 years ago
|
||
This was either a duplicate of something, or was fixed intentionally or accidentally somewhere else, as it no longer hits.
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: needinfo?(aklotz)
Resolution: --- → WORKSFORME
| Assignee | ||
Comment 4•8 years ago
|
||
--disable-accessibility with --enable-crashreporter is actually still causing this error:
> /builds/worker/workspace/build/src/ipc/mscom/ProxyStream.cpp: In lambda function:
> /builds/worker/workspace/build/src/ipc/mscom/ProxyStream.cpp:347:5: error: 'ActivationContext' has not been declared
> ActivationContext::GetCurrentManifestPath(manifestPath);
> ^~~~~~~~~~~~~~~~~
Will try to redo this patch....
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
| Assignee | ||
Comment 5•8 years ago
|
||
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → tom
| Assignee | ||
Updated•8 years ago
|
Attachment #8912424 -
Flags: review?(aklotz)
Updated•8 years ago
|
Priority: -- → P2
Comment 7•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8912424 [details]
Bug 1403358 Only reference ActivationContext if Acessibility is enabled
https://reviewboard.mozilla.org/r/183742/#review201276
Attachment #8912424 -
Flags: review?(aklotz) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by aklotz@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/12f7bd502d4d
Only reference ActivationContext if Acessibility is enabled r=aklotz
Comment 9•8 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 8 years ago → 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in
before you can comment on or make changes to this bug.
Description
•