Bug 1403358 Only reference ActivationContext if Acessibility is enabled r=aklotz

This also enables the crash reporter on the MinGW build, as this is the
only thing blocking that from working.

MozReview-Commit-ID: Hygd7UUQvwl